Add volume for package

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,14 @@ services:
     container_name: ros
     environment:
       - IP_OF_REMOTE_PC=${IP_OF_REMOTE_PC}
-      - DISPLAY
+      - DISPLAY=
+      - QT_X11_NO_MITSHM=1
     # stdin_open: true
     # tty: true
     volumes:
-      - ros_volume:/root/
+      - bin:/usr/bin/
+      - ros_volume_root:/root/
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
 volumes:
-  ros_volume:
+  ros_volume_root:
+  bin:
