--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: ros
     environment:
       - IP_OF_REMOTE_PC=${IP_OF_REMOTE_PC}
-      - DISPLAY=
+      - DISPLAY=unix$DISPLAY
       - QT_X11_NO_MITSHM=1
     # stdin_open: true
     # tty: true
